# deepgraph-rag

./: .env.example  .gitignore  BLOG_POST.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EVALUATION.md  LICENSE  LINKEDIN_POSTS.md  PROJECT_STATUS.md  README.md  SETUP_GUIDE.md  api.py  app.py  app_user.py  app_user_clouds.py  demo.py  docker-compose.yml  evaluation_results.json  extract_simple.py  landing.py  pyproject.toml  query_rag.py  requirements.txt  setup.py  test_rag.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
deepgraph/: __init__.py
deepgraph/adapters/embedders/: __init__.py  base.py  openai.py
deepgraph/core/: schema.py
deepgraph/evaluation/: __init__.py  benchmark.py  datasets.py  metrics.py
deepgraph/pipeline/: __init__.py  base.py  prebuilt.py  stages.py
deepgraph/planning/: __init__.py  dsl.py  executor.py  intent.py
deepgraph/reasoning/: __init__.py  strategies.py  traversal.py
deepgraph/retrieval/: __init__.py  base.py  vector.py
deepgraph/store/: __init__.py  base.py  memgraph.py  neo4j.py
deepgraph/synthesis/: __init__.py  base.py  openai.py  prompts.py
examples/arxiv/: README.md  app.py  app_user.py  app_user_clouds.py  arxiv_adapter.py  config.yaml
examples/crm/: config.yaml  crm_example.py  crm_schema.py
examples/neurology/: README.md  app.py  neurology_schema.py
examples/neurology/scripts/: 01_download_pubmed.py  02_extract_entities.py  03_build_graph.py  05_download_reddit_complete.py  06_extract_reddit_symptoms_v2.py  07_build_reddit_graph.py  build_neurology_graph.py  step1_classify_symptoms.py  step2_enrich_patient_data.py  step3_fix_theme_quotes.py
examples/products/: README.md  app.py  product_schema.py
examples/products/scripts/: 01_download_amazon.py  02_build_product_graph.py
examples/quickstart/: simple_rag.py
schemas/: arxiv.py
scripts/: 01_download_arxiv.py  02_convert_arxiv_simple.py  02_extract_entities.py  03_build_graph.py  04_create_indexes.py  05_add_citations.py  06_extract_concepts.py  run_evaluation.py
tests/integration/: test_store.py
tests/unit/: test_evaluation.py  test_pipeline.py  test_planning.py  test_retrieval_reasoning_synthesis.py  test_schema.py
